Use Debian GNU/Linux 9 instead of Ubuntu 14.04

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,7 @@
-/.vagrant/
 *.pg_dump
+*.retry
+/.env
+/.vagrant/
+/provision/inventory/production
+/provision/roles/*.*
+/provision/vars/production.yml
