--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -30,6 +30,7 @@
   - role: znz.sshd
   - role: znz.unattended-upgrades
   - role: znz.nadoka
+    nadoka_irc_ssl_params: '{}'
     when: nadoka_irc_host is not none and nadoka_irc_host != ""
   - role: znzj.zabbix
     zabbix_server_conf: |
