--- a/provision/roles/zabbix/tasks/main.yml
+++ b/provision/roles/zabbix/tasks/main.yml
@@ -1,27 +1,3 @@
 ---
-- name: "Create /etc/zabbix/alert.d"
-  file:
-    path: "/etc/zabbix/alert.d"
-    state: directory
-    owner: root
-    group: root
-    mode: 0755
-
-- name: "Install /etc/zabbix/alert.d/"
-  copy:
-    src: "{{ item }}"
-    dest: "/etc/zabbix/alert.d/{{ item }}"
-    owner: root
-    group: root
-    mode: 0755
-  with_items:
-  - "notice.rb"
-  - "slack.sh"
-
-- name: "Install /etc/sudoers.d/nadoka"
-  copy:
-    src: "sudoers-nadoka"
-    dest: "/etc/sudoers.d/nadoka"
-    owner: root
-    group: root
-    mode: 0640
+- include: alert.yml tags=zabbix,zabbix-alert
+- include: nasne.yml tags=zabbix,zabbix-nasne
