--- a/provision/requirements.yml
+++ b/provision/requirements.yml
@@ -10,3 +10,6 @@
   name: znz.nadoka
 - src: znz.unattended-upgrades
 - src: znzj.zabbix
+- src: https://github.com/znz/ansible-role-openvpn-client
+  version: master
+  name: znz.openvpn-client
