--- a/provision/playbook.yml
+++ b/provision/playbook.yml
@@ -39,6 +39,8 @@
 
   - role: znz.journald
   - role: znz.sshd
+  - role: znz.postfix-relay-only
+    when: postfix_relay_smtp_server is not none and postfix_relay_smtp_server != ""
   - role: znz.unattended-upgrades
   - role: znz.nadoka
     nadoka:
